--- a/index.html
+++ b/index.html
@@ -1,12 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Hey hey hey!</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mawa - Changing Lives</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=David+Libre:wght@700&amp;Poppins&amp;family=Work+Sans:wght@500;600&amp;display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- partial:index.partial.html -->
+    <header class="header" id="header">
+      <div class="header__container">
+        <div class="header__left">
+          <a class="header__logo" href="#"
+            ><img class="header__icon" src="./Resources/logo1.svg" alt="logo"
+          /></a>
+          <nav class="main-menu" id="main-menu">
+            <ul class="main-menu__list">
+              <li class="main-menu__item">
+                <a class="main-menu__link g-link" href="#">Houses</a>
+              </li>
+              <li class="main-menu__item">
+                <a class="main-menu__link g-link" href="#">Stories</a>
+              </li>
+              <li class="main-menu__item">
+                <a class="main-menu__link g-link" href="#">Why Mawa</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header__right">
+          <a class="header__link" href="#">Contribute</a>
+        </div>
+      </div>
+    </header>
+    <div class="mc" id="luxy">
+      <section class="hero">
+        <div class="hero__info to-top">
+          <span class="hero__subtitle">Meet Mawa </span>
+          <h1 class="hero__title">Building a better future</h1>
+          <p class="hero__description">We change lives — one house at a time</p>
+        </div>
+        <img class="hero__video" src="./Resources/house-vector.svg" alt="" />
+      </section>
+      <section class="price">
+        <div class="price__container g-container">
+          <img class="price__video" src="./Resources/mawa-ropes.PNG" alt="" />
+          <div class="price__info to-top">
+            <span class="price__subtitle">Housing for all</span>
+            <h2 class="price__title">
+              How does Mawa help families and communities?
+            </h2>
+            <p class="price__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+              nihil, beatae, sed hic architecto asperiores labore dolores enim
+              dignissimos quasi excepturi, eveniet itaque?
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="help">
+        <div class="help__container g-container">
+          <div class="help__info to-top">
+            <span class="help__subtitle to-image">We care</span>
+            <h2 class="help__title">We're here to help</h2>
+            <p class="help__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab quae,
+              blanditiis libero nostrum distinctio nemo doloremque quas est
+              magni corrupti aut ad iste ipsam consequatur.
+            </p>
+          </div>
+          <div class="help__images">
+            <img
+              class="help__image"
+              src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/dots.svg"
+              alt="dots"
+            />
+            <picture class="help__picture"
+              ><img
+                class="help__picture-image to-image"
+                src="./Resources/portrait.PNG"
+                alt="help" /></picture
+            ><span class="help__bubble g-bubble to-right"
+              >There's also human help 👋</span
+            >
+          </div>
+        </div>
+      </section>
+      <section class="hands">
+        <div class="hands__container g-container">
+          <div class="hands__info to-top">
+            <span class="hands__subtitle">Quality first</span>
+            <h2 class="hands__title">Check out our projects</h2>
+            <p class="hands__description">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat,
+              distinctio. Deleniti quia beatae labore necessitatibus odio
+              dignissimos, eos eaque numquam adipisci rem et quas dolorem
+              asperiores nulla vitae, harum sint!
+            </p>
+          </div>
+          <div class="hands-cards">
+            <div class="hands-card__item to-right">
+              <img
+                class="hands-card__video"
+                src="./Resources/house1.PNG"
+                alt=""
+              />
+
+              <div class="hands-card__info">
+                <h4 class="hands-card__title">House 1</h4>
+                <p class="hands-card__description">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Mollitia qui eaque dicta nihil esse obcaecati a veritatis
+                  eius. Facilis ipsum velit saepe harum cum maxime labore ipsam
+                  dicta debitis tempore?
+                </p>
+              </div>
+            </div>
+            <div class="hands-card__item to-right2">
+              <img
+                class="hands-card__video"
+                src="./Resources/house2.PNG"
+                alt=""
+              />
+              <div class="hands-card__info">
+                <h4 class="hands-card__title">House 2</h4>
+                <p class="hands-card__description">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Totam soluta qui voluptatem deserunt rem suscipit, tempora
+                  laboriosam vitae nisi iste nemo fugiat vero et odit mollitia
+                  laudantium eius. Quos, vero.
+                </p>
+              </div>
+            </div>
+            <div class="hands-card__item to-right3">
+              <img
+                class="hands-card__video"
+                src="./Resources/house3.PNG"
+                alt=""
+              />
+              <div class="hands-card__info">
+                <h4 class="hands-card__title">House 3</h4>
+                <p class="hands-card__description">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
+                  quidem eveniet quaerat illo asperiores! Nobis, voluptatem
+                  voluptas impedit dolor consequuntur, quis optio facere.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="started">
+        <div class="started__container g-container">
+          <picture class="started__picture-left"
+            ><img
+              class="started__picture-image"
+              src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/started-man.png"
+              alt="man"
+          /></picture>
+          <div class="started__info to-top">
+            <h2 class="started__title">Help create a better future</h2>
+            <p class="started__description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim qui,
+              pariatur tempore mollitia animi ipsam quas. Et, pariatur!
+            </p>
+            <button class="started__button g-button g-button--cta">
+              contribute
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30.296"
+                height="14.884"
+                viewbox="0 0 30.296 14.884"
+              >
+                <path
+                  id="Shape"
+                  d="M19.653,8.852c-.05-.622-.149-1.339,0-1.388a15.881,15.881,0,0,1,2.977-.717C15.087,5.55,7.543,4.4.049,3.253c-.148,0,.1-2.51,0-2.536C8.288,1.962,16.577,3.254,24.815,4.546c-.745-.671-1.539-1.292-2.283-1.962-.148-.144,0-1.1,0-1.292S22.68.143,22.531,0L27,3.875c.4.335.794.718,1.192,1.053.248.239.644.43.744.814a9.529,9.529,0,0,1,0,2.057v.478c0-.048-.049-.048-.049-.1-.1.335-.347.383-.894.479-.943.191-1.886.239-2.829.335a21.5,21.5,0,0,0-4.964.813.048.048,0,0,1-.049.049c-.149.048-.347.1-.5.143ZM.049.717h0Z"
+                  transform="matrix(0.985, -0.174, 0.174, 0.985, 0, 5.036)"
+                  fill="#ffffff"
+                ></path>
+              </svg>
+            </button>
+          </div>
+          <picture class="started__picture-right to-left"
+            ><img
+              class="started__picture-image"
+              src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/started-boy.png"
+              alt="boy"
+          /></picture>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="footer__container g-container">
+          <div class="footer__left">
+            <div class="footer__info">
+              <img class="footer__img" src="./Resources/logo1.svg" alt="logo" />
+              <p class="footer__description">
+                Mawa is a non-profit organization that builds houses for those
+                in need. Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Blanditiis itaque maxime reiciendis cupiditate rem ipsum
+                magni quis atque ullam ducimus?
+              </p>
+            </div>
+            <form class="footer__form">
+              <input
+                class="footer__form-input"
+                placeholder="Your email address"
+              /><a class="footer__form-submit g-button g-button--submit"
+                >go
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="30.296"
+                  height="14.884"
+                  viewbox="0 0 30.296 14.884"
+                >
+                  <path
+                    id="Shape"
+                    d="M19.653,8.852c-.05-.622-.149-1.339,0-1.388a15.881,15.881,0,0,1,2.977-.717C15.087,5.55,7.543,4.4.049,3.253c-.148,0,.1-2.51,0-2.536C8.288,1.962,16.577,3.254,24.815,4.546c-.745-.671-1.539-1.292-2.283-1.962-.148-.144,0-1.1,0-1.292S22.68.143,22.531,0L27,3.875c.4.335.794.718,1.192,1.053.248.239.644.43.744.814a9.529,9.529,0,0,1,0,2.057v.478c0-.048-.049-.048-.049-.1-.1.335-.347.383-.894.479-.943.191-1.886.239-2.829.335a21.5,21.5,0,0,0-4.964.813.048.048,0,0,1-.049.049c-.149.048-.347.1-.5.143ZM.049.717h0Z"
+                    transform="matrix(0.985, -0.174, 0.174, 0.985, 0, 5.036)"
+                    fill="#ffffff"
+                  ></path></svg
+              ></a>
+            </form>
+            <div class="footer__social">
+              <a class="footer__social-link" href=""
+                ><img
+                  class="footer__social-icon"
+                  src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/facebook.svg"
+                  alt="icon" /></a
+              ><a class="footer__social-link" href=""
+                ><img
+                  class="footer__social-icon"
+                  src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/instagram.svg"
+                  alt="icon" /></a
+              ><a class="footer__social-link" href=""
+                ><img
+                  class="footer__social-icon"
+                  src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/youtube.svg"
+                  alt="icon" /></a
+              ><a class="footer__social-link" href=""
+                ><img
+                  class="footer__social-icon"
+                  src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/linkedin.svg"
+                  alt="icon" /></a
+              ><a class="footer__social-link" href=""
+                ><img
+                  class="footer__social-icon"
+                  src="https://raw.githubusercontent.com/ricardoolivaalonso/GetBello/main/public/img/tiktok.svg"
+                  alt="icon"
+              /></a>
+            </div>
+          </div>
+          <div class="footer__right">
+            <div class="footer__links">
+              <ul class="footer__links-list">
+                <h4 class="footer__links-title">Resources</h4>
+                <a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a>
+              </ul>
+              <ul class="footer__links-list">
+                <h4 class="footer__links-title">Navigation</h4>
+                <a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a>
+              </ul>
+              <ul class="footer__links-list">
+                <h4 class="footer__links-title">More</h4>
+                <a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a
+                ><a class="footer__links-item" href="#">Link</a>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer__terms">
+          <p class="footer__terms-link">© 2022 Mawa All right reserved.</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
